2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): Start with a factor of 1, not 0, when
	calculating the impact of active pages.  When calculating the
	number of frames available to an activity, cast the unsigned
	variables to ints.  Correct the calculation of FRAMES.  Bump
	VICTIM->FREE_ALLOCATIONS to a 1000.  Always add GOAL to
	TOTAL_FREED when we send a memory pressure message.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* ager.c (update_stats): When calculating statistics, remove a
	little bit from the total memory available to the root activity.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local) [! ENABLE_TESTS]: Only define in this
	case.
	(viengoos.striped) [! ENABLE_TESTS]: Likewise.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* activity.c: Include "zalloc.h" and "memory.h".
	(activity_dump): Also print the total amount of memory, the
	available memory, and the memory on the laundry list.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the cap_rubout implementation,
	shootdown TARGET.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_to_cap): Correctly set the subpage
	specification.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos_LDADD): Also add
	../libhurd-mm/libas-kernel.a before libc-kernel.a.

2008-06-30  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_shootdown): Iterate over all capabilities in a
	cappage and all elements in a folio, not just the first log2 of
	them.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local): New target.
	(viengoos.striped): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* thread.c: Include <hurd/trace.h>.
	(thread_exregs): Improve debugging output.
	(thread_raise_exception): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): After printing the profile data,
	print the enabled debugging options.
	